<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="application_name">MyDate</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">No account yet? Create one</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="member_login">Already a member? Login</string>
    <string name="search">Search Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="chat">Chat</string>
    <string name="profile_name">Profile Name</string>
</resources>
